--- a/个性化推荐算法/Recall-ItermCF_UserCF/理论.md
+++ b/个性化推荐算法/Recall-ItermCF_UserCF/理论.md
@@ -22,3 +22,10 @@
 # 3 ItermCF与UserCF针对不同场景的分析
 ![img](img/13.jpg)
 ![img](img/14.jpg)
+
+
+# 4 个性化推荐召回算法的离线在线评估方法
+
+![img](img/15.jpg)
+![img](img/16.jpg)
+![img](img/17.jpg)
