--- a/个性化推荐算法/个性化学习排序算法综述.md
+++ b/个性化推荐算法/个性化学习排序算法综述.md
@@ -9,9 +9,11 @@
 
 **所以特征的选择与模型的训练是至关重要的。**
 
-那么什么是学习排序呢？
+# 那么什么是学习排序呢？
 
-**学习排序：将个性化召回的物品候选集根据物品本身的属性结合用户的属性，上下文等信息给出展现优先级的过程。**
+学习排序：将个性化召回的物品候选集根据**物品本身的属性** + **用户的属性** + **上下文等信息**给出展现优先级的过程。
+
+在推荐系统中，**召回的得分，大部分都不是用用户维度的数据**，都是**各种方式用物品之间的关系数据去获取的**。所以你可以理解成，**协同过滤等方法得的分，是物品的关联程度分**。只靠这个分推也可以，但他不是真正意义上的个性化推荐。召回完成之后，要做排序，而是是个性化排序，才产生真正的个性化推荐，用LR模型即可如此！
 
 下面用一个例子进行展示：
 
