--- a/个性化推荐算法/个性化学习排序算法综述.md
+++ b/个性化推荐算法/个性化学习排序算法综述.md
@@ -9,7 +9,7 @@
 
 **所以特征的选择与模型的训练是至关重要的。**
 
-# 那么什么是学习排序呢？
+# 那么为什么在召回后要学习排序呢？
 
 学习排序：将个性化召回的物品候选集根据**物品本身的属性** + **用户的属性** + **上下文等信息**给出展现优先级的过程。
 
