--- a/个性化推荐算法/个性化学习排序算法综述.md
+++ b/个性化推荐算法/个性化学习排序算法综述.md
@@ -15,6 +15,18 @@
 
 在推荐系统中，**召回的得分，大部分都不是用用户维度的数据**，都是**各种方式用物品之间的关系数据去获取的**。所以你可以理解成，**协同过滤等方法得的分，是物品的关联程度分**。只靠这个分推也可以，但他不是真正意义上的个性化推荐。召回完成之后，要做排序，而是是个性化排序，才产生真正的个性化推荐，用LR模型即可如此！
 
+对于有一定规模的推荐系统，基本都是分召回和排序两层的。为了追求更好的推荐效果，模型的算力需求通常是比较大的，基本无法应付单个用户到百万千万内容的匹配和排序。目前主流的排序模型，在一定qps和算力支持的基础上，通常能完成单个请求几百到几千的排序任务。
+
+所以，推荐系统常见的做法，是先通过多种低算力的方法簇进行召回，实现初步筛选，然后用排序模型在候选集合上完成打分排序。在较大型的推荐系统中，中间可能会再加一层粗排，变成召回，粗排，精排的内容匹配筛选流。
+
+* 召回使用多种方法簇为排序提供候选集，需要尽量保证后续集和用户的匹配程度，内容的优质程度，内容的丰富程度。
+* 粗排进行二次筛选，用相对较小的算力，过滤掉低质低匹配内容，并且要保证多样性和候选集合有一定的探索能力。
+* 精排序在最终的集合上进行排序和多目标预估，最后在加入多样性强插等人工干预规则。
+
+个人理解：
+* 1. 召回一定是多方法簇混合召回，尽量从不同角度和不同方法筛选候选集。相关性和召回率永远是召回的首要迭代方向，也是最有效的，在相关性和追打效果有一定保证的时候，提升召回的泛化和探索是继续提升推荐效果的一个重要途径。
+* 2. 排序需要具备更强的筛选和排序能力，多目标建模结合业务理解的人工规则。用户实时反馈行为的捕捉和利用对排序也是至关重要的，因为模型可以做到比较强的泛化，但是对实时反馈信号的学习和判断总是很难跟上的。
+
 下面用一个例子进行展示：
 
 ![img](img/11.png)
@@ -40,7 +52,7 @@
 
 ![img](img/12.png)
 
-###（1）prerank
+（1）prerank
 
 也就是排序之前的部分，由于排序的模型由浅层模型切换到深层模型的时候，耗时在不停的增加。
 比如之前召回可以允许有5000个物品去做浅层模型，比如说逻辑回归，就是训练出一组参数，那么整体的打分过程耗时很短。
@@ -50,7 +62,7 @@
 
 粗排往往以一些简单的规则为主，比如说**使用后验CTR或者说对于新的物品使用预估的CTR**等等。
 
-###（2）Rank
+（2）Rank
 
 主排序部分就是重点部分，现在业界比较流行的还有一次重排。
 
@@ -68,7 +80,7 @@
 
 随着深度学习在工业界应用的不断成熟，以及像**tensorflow等深度学习框架的开源，现在工业界大部分的主排序模型都已经切换到了深度学习模型**。
 
-###（3）Rerank
+（3）Rerank
 
 这个重排是将**主排序的结果再放入一个类似于强化学习的一个模型里面去进行一个重排序**，这种主要是**突出了用户最近几次行为的特征，将与最近几次用户行为相近的item给优先的展示，以便获取用户行为的连续性**。
 
